--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
   "devDependencies": {
     "@eslint/js": "^9.29.0",
     "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.3",
+    "@types/pino-http": "^5.8.4",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
     "@typescript-eslint/parser": "^8.34.1",
     "eslint": "^9.29.0",
