--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 ALLOWED_ORIGINS=
 PORT=
- MONGODB_USER=
-   MONGODB_PASSWORD=
-   MONGODB_URL=
-   MONGODB_DB=
+MONGODB_USER=
+MONGODB_PASSWORD=
+MONGODB_URL=
+MONGODB_DB=
 
 TELEGRAM_BOT_TOKEN=
 CHAT_ID=
+WEBHOOK_URL=
