--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "grammy": "^1.36.3",
+    "handlebars": "^4.7.8",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
     "mongoose": "^8.16.0",
